src/objects/NO_Insurance_BEX__c.object
<CustomObject>
    <fields>
        <fullName>Age_Next_Bday__c</fullName>
        <label>Age Next Bday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_14__c</fullName>
        <label>Day 14</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_30__c</fullName>
        <label>Day 30</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gendar__c</fullName>
        <label>Gendar</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Smoker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Smoker</label>
        <type>Checkbox</type>
    </fields>
    <label>NO Insurance BEX</label>
    <nameField>
        <label>NO Insurance BEX Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NO Insurance BEXs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>